tests/baselines/reference/unusedVariablesinNamespaces2.errors.txt
tests/cases/compiler/unusedVariablesinNamespaces2.ts(3,11): error TS6133: 'numberRegexp' is declared but never used.


==== tests/cases/compiler/unusedVariablesinNamespaces2.ts (1 errors) ====
    namespace Validation {
        const lettersRegexp = /^[A-Za-z]+$/;
        const numberRegexp = /^[0-9]+$/;
              ~~~~~~~~~~~~
!!! error TS6133: 'numberRegexp' is declared but never used.
    
        export class LettersOnlyValidator {
            isAcceptable(s2: string) {
                return lettersRegexp.test(s2);
            }
        }
    }